fix: Use a safer and better approach to eliminate XML warnings.

--- a/package.json
+++ b/package.json
@@ -5,18 +5,16 @@
   },
   "author": "Rizart Dokollari",
   "name": "7daystodie_mod_no_location",
-  "version": "1.0.1",
   "license": "GPL-3.0",
   "devDependencies": {
     "7z-bin": "Nexus-Mods/7z-bin",
     "dotenv": "^16.4.5",
     "npm-check": "^6.0.1",
-    "prettier": "^3.3.3"
+    "xmldom": "^0.6.0",
+    "xpath": "^0.0.34"
   },
   "scripts": {
     "build": "node scripts/build.js",
-    "prettier": "prettier --check .",
-    "prettier:fix": "prettier --write .",
     "update:dependencies": "npm-check -u",
     "generate_readme": "node scripts/generate_readme.js",
     "generate_readme:watch": "nodemon --watch documentation -e md scripts/generate_readme.js"
